--- a/templates/blog.html
+++ b/templates/blog.html
@@ -13,7 +13,7 @@
     {% else %}
         {% for post in posts %}
         <article>
-            <h3>{{post.title}}</h3>
+            <h3><a href="/blog?id={{post.id}}">{{post.title}}</a></h3>
             <p>{{post.body}}</p>
         </article>
         {% endfor %}
