All functional except clickable footers for authors

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,20 @@
         {% endblock %}
     </head>
     <body>
-        <a href="{{ url_for('blog')}}">Main Blog Page</a>
-        <a href="{{ url_for('newpost')}}">Add a Blog Entry</a>
+        <a href='/'>Home</a>
+        <a href="blog">All Posts</a>
+        <a href="newpost">Add a Blog Entry</a>
+        <a href="login">Login</a>
+        <a href="logout">Logout</a>
+
+        {% with messages = get_flashed_messages(with_categories=True) %}
+        <ul>
+        {% for category,message in messages %}
+            <li class='{{category}}'>{{message}}</li>
+        {% endfor %}
+        </ul>
+        {% endwith %}
+
         {% block content %}
         {% endblock %}
     </body>
