--- a/templates/index.html
+++ b/templates/index.html
@@ -4,4 +4,20 @@
 {% endblock %}
 
 {% block content %}
+<header>
+        <h1>Thinkers, Talkers, and Dirty Rascals:</h1>
+    </header>
+    <main>
+        {% if users|length == 0 %}
+        <p>No one is registered. There may have been a plague</p>
+        {% else %}
+            <ul>
+            {% for user in users %}
+            
+                <!-- Fix link to reflect user's posts -->
+                <li><a href="/blog?user_id={{user.id}}">{{user.username}}</a></li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    </main>
 {% endblock %}
