--- a/templates/login.html
+++ b/templates/login.html
@@ -4,4 +4,19 @@
 {% endblock %}
 
 {% block content %}
+<h1>Log in to Contribute</h1>
+<p>If you don't have an account, you may <a href="/signup">register</a> for one</p>
+<form action="/login" method="post">
+    <table>
+        <tr>
+            <td><label for="username">Username:</label></td>
+            <td><input name="username" id="username" type="text" value="{{ username }}"></td>
+        </tr>
+        <tr>
+            <td><label for="password">Password</label></td>
+            <td><input name="password" id='password' type="password"></td>
+        </tr>
+    </table>
+    <input type="submit" value="Login">
+</form>
 {% endblock %}
