--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,21 +9,18 @@
     <table>
         <tr>
             <td><label for="username">Username:</label></td>
-            <td>
-                <input name="username" type="text" value="{{ username }}">
-            </td>
+            <td><input name="username" id='username' type="text" value="{{ username }}"></td>
+            <td class='error'>{{user_error}}</td>
         </tr>
         <tr>
             <td><label for="password">Password:</label></td>
-            <td>
-                <input name="password" type="password">
-            </td>
+            <td><input name="password" id='password' type="password"></td>
+            <td class='error'>{{password_error}}</td>
         </tr>
         <tr>
             <td><label for="verify">Verify Password:</label></td>
-            <td>
-                <input name="verify" type="password">
-            </td>
+            <td><input name="verify" id='verify' type="password"></td>
+            <td class='error'>{{match_error}}</td>
         </tr>
     </table>
     <input type="submit" value="Register">
