--- a/templates/ind_post.html
+++ b/templates/ind_post.html
@@ -9,5 +9,6 @@
 </header>
 <main>
     <p>{{post.body}}</p>
+    <p>Written by <a href="/blog?user_id={{post.user_id}}">{{post.user}}</a></p>
 </main>
 {% endblock %}
