--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,20 +2,19 @@
 
 {% block style %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylenewpost.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet"> 
 {% endblock %}
 
 {% block content %}
-    <header>
-        <h2>What's on Your Mind?</h2>
-    </header>
     <main>
+        <h2>What's on Your Mind?</h2>
         <form method="post">
             <table>
                 <tr>
                     <td><label for='title'>Title:</label></td>
                 </tr>
                 <tr>
-                    <td><input type="text" name="title" id="title" value="{{post_title}}"/></td>
+                    <td><input class="inputarea" type="text" name="title" id="title" value="{{post_title}}"/></td>
                 </tr>
                 <tr>
                     <td class="error">{{title_error}}</td>
@@ -23,13 +22,13 @@
                 <tr>
                     <td><label for='body'>Content:</label></td>
                 </tr>
-                    <td><textarea name='body' id='body'>{{body}}</textarea></td>
+                    <td><textarea class="inputarea" name='body' id='body' cols="73" rows="17">{{body}}</textarea></td>
                 </tr>
                 <tr>
                     <td class="error">{{body_error}}</td>
                 </tr>
                 <tr>
-                    <td><input type="submit" value="Post"/></td>
+                    <td><input class="button" type="submit" value="Post"/></td>
                 </tr>
             </table>
         </form>
