--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         <title>{{title}}</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='normalize.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylebase.css') }}">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet"> 
         {% block style %}
         {% endblock %}
     </head>
