--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block style %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleblog.css') }}">
 {% endblock %}
 
 {% block content %}
