--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block style %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleindex.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -14,7 +15,6 @@
             <ul>
             {% for user in users %}
             
-                <!-- Fix link to reflect user's posts -->
                 <li><a href="/blog?user_id={{user.id}}">{{user.username}}</a></li>
             {% endfor %}
             </ul>
