--- a/static/stylebase.css
+++ b/static/stylebase.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
 nav ul {
     padding: 0;
     margin: 10px;
@@ -27,7 +31,7 @@ color: white;
 background-color: #92B558;
 }
 
-body {
-    font-family: 'Raleway', sans-serif;
+#flash {
+    margin-left: 50px;
 }
 
