--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         {% with messages = get_flashed_messages(with_categories=True) %}
         <ul>
         {% for category,message in messages %}
-            <li class='{{category}}'>{{message}}</li>
+            <li class='{{category}}' id="flash">{{message}}</li>
         {% endfor %}
         </ul>
         {% endwith %}
