--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <h1>Thinkers, Talkers, and Dirty Rascals:</h1>
     <br>
     {% if users|length == 0 %}
-    <p>No one is registered. There may have been a plague</p>
+    <p>No one is registered. There may have been a plague.</p>
     {% else %}
         <ul>
         {% for user in users %}
